<resources>
    <string name="app_name">EjercicioXO</string>
    <string name="jugadores">Jugadores</string>
    <string name="jugar">Jugar X0</string>
    <string name="name">Carlos Javier Cañénguez Martínez</string>
    <string name="pg">Partidas ganadas:</string>
    <string name="numero">99</string>
    <string name="title_activity_jugadores_main">Jugadores</string>
    <string name="title_activity_jugadores_edicion">JugadoresEdicion</string>

    <string name="nombre">Nombre del jugador</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_elegir_jugador">Elegir un jugador</string>

    <string name="unojuga">Un jugador</string>
    <string name="dosjuga">Dos jugadores</string>
    <string name="seleJuga">Seleccione la cantidad de jugadores</string>
</resources>
