<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModoJuego">

    <TextView
        android:layout_margin="25dp"
        android:gravity="center"
        android:text="@string/seleJuga"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <Button
        android:onClick="OnClickUnJugador"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unojuga"/>

    <Button
        android:onClick="OnClickDosJugadores"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dosjuga"/>

</LinearLayout>