<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvJugadores"
        app:cardUseCompatPadding="true"
        app:cardElevation="6dp"
        app:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                app:srcCompat="@android:drawable/star_on">

            </ImageView>

            <LinearLayout
                android:weightSum="1"
                android:orientation="vertical"
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txvNombrePlantilla"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/name"
                    android:layout_weight="0.60"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                </TextView>

                <LinearLayout
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:layout_weight="0.40"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">


                    <TextView
                        android:gravity="right|center_vertical"
                        android:textSize="16sp"
                        android:text="@string/pg"
                        android:layout_weight="0.75"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                    </TextView>

                    <TextView
                        android:id="@+id/txvGanadasPlantilla"
                        android:paddingRight="10dp"
                        android:gravity="right|center_vertical"
                        android:textSize="16sp"
                        android:text="@string/numero"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>